[package]
name = "deepeedeekay"
version = "0.1.0"
edition = "2024"
description = "Bindings to system-installed DPDK"
documentation = "https://docs.rs/deepeedeekay-sys"
homepage = "https://crates.io/crates/deepeedeekay-sys"
license.workspace = true
repository.workspace = true

[dependencies]
bstr = "1.12.0"
bytes = "1.10.1"
deepeedeekay-sys = { version = "0.1.0", path = "sys" }
itertools = "0.14.0"
num = "0.4.3"

[workspace]
members = ["sys"]
package.license = "LicenseRef-PrivateUndisclosed"
package.repository = "https://github.com/aatifsyed/deepeedeekay"

[dev-dependencies]
static_assertions = "1.1.0"
